src/scss/modules/_theme-controller.scss
body {
    &.dark-theme {
        .theme-controller {
            &__icon {
                svg {
                    path {
                        fill: map-get($colors-dark, 'primary-text-color');
                    }
                }
            }
        }

    }
}


.theme-controller {
    position: relative;
    display: flex;
    align-items: center;
    gap: 8px;
    width: 80px;
    justify-content: space-between;

    &__icon {
        display: flex;
    }

    &__toggle {
        &:focus-within .theme-controller__toggle-circle {
            box-shadow: 0 0 1px $purple;
            outline: -webkit-focus-ring-color auto 1px;
        }
    }

    &__checkbox {
        opacity: 0;
        width: 0;
        height: 0;

        &:checked~.theme-controller__toggle-circle:before {
            transform: translateX(100%);
        }
    }

    &__toggle-circle {
        position: absolute;
        cursor: pointer;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        background-color: $purple;
        transition: transform 0.4s;
        border-radius: 999px;
        width: 32px;
        height: 20px;
        margin: 0 auto;

        &.on:before {
            transform: translate(100%);
        }

        &:before {
            position: absolute;
            content: "";
            width: 12px;
            height: 12px;
            left: 4px;
            bottom: 4px;
            background-color: $white;
            -webkit-transition: .4s;
            transition: .4s;
            border-radius: 50%;
        }
    }
}

@media (min-width: 768px) {
    .theme-controller {
        width: 128px;

        &__icon {
            svg {
                width: 24px;
                height: 24px;
            }
        }

        &__toggle-circle {
            width: 48px;
            height: 28px;

            &:before {
                width: 20px;
                height: 20px;
            }
        }
    }
}

